--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
         }
-        .conteiner{
+        .container{
             background-color: aquamarine;
             height: 100vh;
             width: 100vw;
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <div class="conteiner">Today is Wendseday</div>
+    <div class="container">Today is Wendseday</div>
 </body>
 </html>
