--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
-            margin: 0;
-            padding: 0;
+        .container {
+            display: flex;
+            background: gray;
         }
-        .container{
-            background-color: aquamarine;
-            height: 100vh;
-            width: 100vw;
+
+        .item {
+            background: #0bd;
+            color: #fff;
+            margin: 10px;
+            padding: 10px;
         }
     </style>
 </head>
+
 <body>
-    <div class="container">Today is Wendseday</div>
+    <div class="container">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 4</div>
+        <div class="item">Item 5</div>
+        <div class="item">Item 6</div>
+        <div class="item">Item 7</div>
+        <div class="item">Item 8</div>
+    </div>
 </body>
+
 </html>
