--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Document</title>
     <style>
         .container {
-            display: flex;
             background: gray;
+            display: flex;
+            justify-content: center;
         }
 
         .item {
@@ -26,11 +27,6 @@
         <div class="item">Item 1</div>
         <div class="item">Item 2</div>
         <div class="item">Item 3</div>
-        <div class="item">Item 4</div>
-        <div class="item">Item 5</div>
-        <div class="item">Item 6</div>
-        <div class="item">Item 7</div>
-        <div class="item">Item 8</div>
     </div>
 </body>
 
